fix: fixed funnel and journey DAO to accept null for nullable fields